# PasswordManager

./: CMakeLists.txt  PassPhraseSystem.c  PasswordValidation.c  README.md  ThingsToFix.txt  main.c  nameValidation.c
